src/snapshots/test_lex__lex::test_lex::bool_expressions.snap
---
created: "2019-03-08T07:53:01.175899Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: Ident(
            "foo"
        ),
        span: Span {
            start: 0,
            end: 3
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 4,
            end: 5
        }
    },
    Token {
        kind: True,
        span: Span {
            start: 6,
            end: 10
        }
    },
    Token {
        kind: And,
        span: Span {
            start: 11,
            end: 14
        }
    },
    Token {
        kind: String(
            "bar"
        ),
        span: Span {
            start: 15,
            end: 20
        }
    },
    Token {
        kind: Or,
        span: Span {
            start: 21,
            end: 23
        }
    },
    Token {
        kind: String(
            "buzz"
        ),
        span: Span {
            start: 24,
            end: 30
        }
    }
]
