src/snapshots/test_lex__lex::test_lex::classes_via_tables.snap
---
created: "2019-03-08T07:38:59.554879Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: NewLine,
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Ident(
            "Foo"
        ),
        span: Span {
            start: 9,
            end: 12
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 13,
            end: 14
        }
    },
    Token {
        kind: LCurly,
        span: Span {
            start: 15,
            end: 16
        }
    },
    Token {
        kind: RCurly,
        span: Span {
            start: 16,
            end: 17
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 17,
            end: 18
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 18,
            end: 19
        }
    },
    Token {
        kind: Function,
        span: Span {
            start: 27,
            end: 35
        }
    },
    Token {
        kind: Ident(
            "Foo"
        ),
        span: Span {
            start: 36,
            end: 39
        }
    },
    Token {
        kind: Colon,
        span: Span {
            start: 39,
            end: 40
        }
    },
    Token {
        kind: Ident(
            "new"
        ),
        span: Span {
            start: 40,
            end: 43
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 43,
            end: 44
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 44,
            end: 45
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 45,
            end: 46
        }
    },
    Token {
        kind: Local,
        span: Span {
            start: 58,
            end: 63
        }
    },
    Token {
        kind: Ident(
            "obj"
        ),
        span: Span {
            start: 64,
            end: 67
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 68,
            end: 69
        }
    },
    Token {
        kind: LCurly,
        span: Span {
            start: 70,
            end: 71
        }
    },
    Token {
        kind: Ident(
            "someData"
        ),
        span: Span {
            start: 71,
            end: 79
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 80,
            end: 81
        }
    },
    Token {
        kind: String(
            "foo!"
        ),
        span: Span {
            start: 82,
            end: 88
        }
    },
    Token {
        kind: RCurly,
        span: Span {
            start: 88,
            end: 89
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 89,
            end: 90
        }
    },
    Token {
        kind: Ident(
            "self"
        ),
        span: Span {
            start: 102,
            end: 106
        }
    },
    Token {
        kind: Period,
        span: Span {
            start: 106,
            end: 107
        }
    },
    Token {
        kind: Ident(
            "__index"
        ),
        span: Span {
            start: 107,
            end: 114
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 115,
            end: 116
        }
    },
    Token {
        kind: Ident(
            "self"
        ),
        span: Span {
            start: 117,
            end: 121
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 121,
            end: 122
        }
    },
    Token {
        kind: Return,
        span: Span {
            start: 134,
            end: 140
        }
    },
    Token {
        kind: Ident(
            "setmetatable"
        ),
        span: Span {
            start: 141,
            end: 153
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 153,
            end: 154
        }
    },
    Token {
        kind: Ident(
            "obj"
        ),
        span: Span {
            start: 154,
            end: 157
        }
    },
    Token {
        kind: Comma,
        span: Span {
            start: 157,
            end: 158
        }
    },
    Token {
        kind: Ident(
            "self"
        ),
        span: Span {
            start: 159,
            end: 163
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 163,
            end: 164
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 164,
            end: 165
        }
    },
    Token {
        kind: End,
        span: Span {
            start: 173,
            end: 176
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 176,
            end: 177
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 177,
            end: 178
        }
    },
    Token {
        kind: Function,
        span: Span {
            start: 186,
            end: 194
        }
    },
    Token {
        kind: Ident(
            "Foo"
        ),
        span: Span {
            start: 195,
            end: 198
        }
    },
    Token {
        kind: Colon,
        span: Span {
            start: 198,
            end: 199
        }
    },
    Token {
        kind: Ident(
            "bar"
        ),
        span: Span {
            start: 199,
            end: 202
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 202,
            end: 203
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 203,
            end: 204
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 204,
            end: 205
        }
    },
    Token {
        kind: Return,
        span: Span {
            start: 217,
            end: 223
        }
    },
    Token {
        kind: Ident(
            "self"
        ),
        span: Span {
            start: 224,
            end: 228
        }
    },
    Token {
        kind: Period,
        span: Span {
            start: 228,
            end: 229
        }
    },
    Token {
        kind: Ident(
            "someData"
        ),
        span: Span {
            start: 229,
            end: 237
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 237,
            end: 238
        }
    },
    Token {
        kind: End,
        span: Span {
            start: 246,
            end: 249
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 249,
            end: 250
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 250,
            end: 251
        }
    },
    Token {
        kind: Ident(
            "f"
        ),
        span: Span {
            start: 259,
            end: 260
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 261,
            end: 262
        }
    },
    Token {
        kind: Ident(
            "Foo"
        ),
        span: Span {
            start: 263,
            end: 266
        }
    },
    Token {
        kind: Colon,
        span: Span {
            start: 266,
            end: 267
        }
    },
    Token {
        kind: Ident(
            "new"
        ),
        span: Span {
            start: 267,
            end: 270
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 270,
            end: 271
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 271,
            end: 272
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 272,
            end: 273
        }
    },
    Token {
        kind: Ident(
            "f"
        ),
        span: Span {
            start: 281,
            end: 282
        }
    },
    Token {
        kind: Colon,
        span: Span {
            start: 282,
            end: 283
        }
    },
    Token {
        kind: Ident(
            "bar"
        ),
        span: Span {
            start: 283,
            end: 286
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 286,
            end: 287
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 287,
            end: 288
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 288,
            end: 289
        }
    }
]
