src/snapshots/test_lex__lex::test_lex::for_loop.snap
---
created: "2019-03-08T07:47:25.232263Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: NewLine,
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Ident(
            "sum"
        ),
        span: Span {
            start: 9,
            end: 12
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 13,
            end: 14
        }
    },
    Token {
        kind: Number(
            0.0
        ),
        span: Span {
            start: 15,
            end: 16
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 16,
            end: 17
        }
    },
    Token {
        kind: For,
        span: Span {
            start: 25,
            end: 28
        }
    },
    Token {
        kind: Ident(
            "i"
        ),
        span: Span {
            start: 29,
            end: 30
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 31,
            end: 32
        }
    },
    Token {
        kind: Number(
            1.0
        ),
        span: Span {
            start: 33,
            end: 34
        }
    },
    Token {
        kind: Comma,
        span: Span {
            start: 34,
            end: 35
        }
    },
    Token {
        kind: Number(
            100.0
        ),
        span: Span {
            start: 36,
            end: 39
        }
    },
    Token {
        kind: Do,
        span: Span {
            start: 40,
            end: 42
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 42,
            end: 43
        }
    },
    Token {
        kind: Ident(
            "sum"
        ),
        span: Span {
            start: 55,
            end: 58
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 59,
            end: 60
        }
    },
    Token {
        kind: Ident(
            "sum"
        ),
        span: Span {
            start: 61,
            end: 64
        }
    },
    Token {
        kind: Plus,
        span: Span {
            start: 65,
            end: 66
        }
    },
    Token {
        kind: Ident(
            "i"
        ),
        span: Span {
            start: 67,
            end: 68
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 68,
            end: 69
        }
    },
    Token {
        kind: End,
        span: Span {
            start: 77,
            end: 80
        }
    }
]
