src/snapshots/test_lex__lex::test_lex::function_def.snap
---
created: "2019-03-08T07:47:25.305027Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: NewLine,
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Function,
        span: Span {
            start: 9,
            end: 17
        }
    },
    Token {
        kind: Ident(
            "fib"
        ),
        span: Span {
            start: 18,
            end: 21
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 21,
            end: 22
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 22,
            end: 23
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 23,
            end: 24
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 24,
            end: 25
        }
    },
    Token {
        kind: If,
        span: Span {
            start: 37,
            end: 39
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 40,
            end: 41
        }
    },
    Token {
        kind: LT,
        span: Span {
            start: 42,
            end: 43
        }
    },
    Token {
        kind: Number(
            2.0
        ),
        span: Span {
            start: 44,
            end: 45
        }
    },
    Token {
        kind: Then,
        span: Span {
            start: 46,
            end: 50
        }
    },
    Token {
        kind: Return,
        span: Span {
            start: 51,
            end: 57
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 58,
            end: 59
        }
    },
    Token {
        kind: End,
        span: Span {
            start: 60,
            end: 63
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 63,
            end: 64
        }
    },
    Token {
        kind: Return,
        span: Span {
            start: 76,
            end: 82
        }
    },
    Token {
        kind: Ident(
            "fib"
        ),
        span: Span {
            start: 83,
            end: 86
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 86,
            end: 87
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 87,
            end: 88
        }
    },
    Token {
        kind: Minus,
        span: Span {
            start: 89,
            end: 90
        }
    },
    Token {
        kind: Number(
            2.0
        ),
        span: Span {
            start: 91,
            end: 92
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 92,
            end: 93
        }
    },
    Token {
        kind: Plus,
        span: Span {
            start: 94,
            end: 95
        }
    },
    Token {
        kind: Ident(
            "fib"
        ),
        span: Span {
            start: 96,
            end: 99
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 99,
            end: 100
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 100,
            end: 101
        }
    },
    Token {
        kind: Minus,
        span: Span {
            start: 102,
            end: 103
        }
    },
    Token {
        kind: Number(
            1.0
        ),
        span: Span {
            start: 104,
            end: 105
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 105,
            end: 106
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 106,
            end: 107
        }
    },
    Token {
        kind: End,
        span: Span {
            start: 115,
            end: 118
        }
    }
]
