src/snapshots/test_lex__lex::test_lex::goto.snap
---
created: "2019-03-08T07:48:37.247055Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: NewLine,
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: For,
        span: Span {
            start: 13,
            end: 16
        }
    },
    Token {
        kind: Ident(
            "z"
        ),
        span: Span {
            start: 17,
            end: 18
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 18,
            end: 19
        }
    },
    Token {
        kind: Number(
            1.0
        ),
        span: Span {
            start: 19,
            end: 20
        }
    },
    Token {
        kind: Comma,
        span: Span {
            start: 20,
            end: 21
        }
    },
    Token {
        kind: Number(
            10.0
        ),
        span: Span {
            start: 21,
            end: 23
        }
    },
    Token {
        kind: Do,
        span: Span {
            start: 24,
            end: 26
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 26,
            end: 27
        }
    },
    Token {
        kind: Goto,
        span: Span {
            start: 43,
            end: 47
        }
    },
    Token {
        kind: Ident(
            "done"
        ),
        span: Span {
            start: 48,
            end: 52
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 52,
            end: 53
        }
    },
    Token {
        kind: End,
        span: Span {
            start: 65,
            end: 68
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 68,
            end: 69
        }
    },
    Token {
        kind: DBColon,
        span: Span {
            start: 81,
            end: 83
        }
    },
    Token {
        kind: Ident(
            "done"
        ),
        span: Span {
            start: 83,
            end: 87
        }
    },
    Token {
        kind: DBColon,
        span: Span {
            start: 87,
            end: 89
        }
    }
]
