src/snapshots/test_lex__lex::test_lex::if_stmt.snap
---
created: "2019-03-08T07:47:25.342107Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: NewLine,
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: If,
        span: Span {
            start: 13,
            end: 15
        }
    },
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 16,
            end: 17
        }
    },
    Token {
        kind: EQ,
        span: Span {
            start: 18,
            end: 20
        }
    },
    Token {
        kind: Number(
            1.0
        ),
        span: Span {
            start: 21,
            end: 22
        }
    },
    Token {
        kind: Then,
        span: Span {
            start: 23,
            end: 27
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 27,
            end: 28
        }
    },
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 44,
            end: 45
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 46,
            end: 47
        }
    },
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 48,
            end: 49
        }
    },
    Token {
        kind: Plus,
        span: Span {
            start: 50,
            end: 51
        }
    },
    Token {
        kind: Number(
            1.0
        ),
        span: Span {
            start: 52,
            end: 53
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 53,
            end: 54
        }
    },
    Token {
        kind: ElseIf,
        span: Span {
            start: 66,
            end: 72
        }
    },
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 73,
            end: 74
        }
    },
    Token {
        kind: GT,
        span: Span {
            start: 75,
            end: 76
        }
    },
    Token {
        kind: Number(
            5.0
        ),
        span: Span {
            start: 77,
            end: 78
        }
    },
    Token {
        kind: Then,
        span: Span {
            start: 79,
            end: 83
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 83,
            end: 84
        }
    },
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 100,
            end: 101
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 102,
            end: 103
        }
    },
    Token {
        kind: Number(
            -1.0
        ),
        span: Span {
            start: 104,
            end: 106
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 106,
            end: 107
        }
    },
    Token {
        kind: Else,
        span: Span {
            start: 119,
            end: 123
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 123,
            end: 124
        }
    },
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 140,
            end: 141
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 142,
            end: 143
        }
    },
    Token {
        kind: Number(
            0.0
        ),
        span: Span {
            start: 144,
            end: 145
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 145,
            end: 146
        }
    },
    Token {
        kind: End,
        span: Span {
            start: 158,
            end: 161
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 161,
            end: 162
        }
    }
]
