src/snapshots/test_lex__lex::test_lex::list_size.snap
---
created: "2019-03-08T07:47:25.353854Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: NewLine,
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Local,
        span: Span {
            start: 9,
            end: 14
        }
    },
    Token {
        kind: Ident(
            "a"
        ),
        span: Span {
            start: 15,
            end: 16
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 17,
            end: 18
        }
    },
    Token {
        kind: Number(
            10.0
        ),
        span: Span {
            start: 19,
            end: 21
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 21,
            end: 22
        }
    },
    Token {
        kind: Ident(
            "print"
        ),
        span: Span {
            start: 30,
            end: 35
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 35,
            end: 36
        }
    },
    Token {
        kind: Hash,
        span: Span {
            start: 36,
            end: 37
        }
    },
    Token {
        kind: Ident(
            "a"
        ),
        span: Span {
            start: 37,
            end: 38
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 38,
            end: 39
        }
    }
]
